# Dataset

./: .gitignore  CMakeLists.txt  README.md  build&run.sh  finall_test.py
Baidu_Paddle_object_detection/: 1.camsave.py  2.inferrealtime.py  2.inferwhile.py  2.realtime.sh  2.while.sh  3.camread.py  README.md  infer.py  reader.py
data/: neg.txt  pos.txt  pos.vec
data/data_classroomD9D405_2018.10 .22_10:05_100/: img.txt
data/data_classroomD9D405_2018.10.22_10:05/: README.txt  imglist.txt  list.sh
data/neg/: neg_2gray.py
data/pos/: pos_2gray.py
haar-model/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
include/: include_all.h
py_code/: video2img.py
src/: Box-select.cpp  CMakeLists.txt  dataset.cpp  getimg.cpp  video2img.cpp
